--- a/.github/workflows/update-lockfile.yml
+++ b/.github/workflows/update-lockfile.yml
@@ -2,7 +2,7 @@ name: UPDATE-FLAKE-LOCKFILE
 on:
   workflow_dispatch: # allows manual triggering
   schedule:
-    - cron: '0 18 * * 5' # at 02:00 in every Saturday (UTC+8)
+    - cron: '0 18 1-7 * 5' # at 02:00 in the first Saturday per month (UTC+8)
 
 jobs:
   update:
