chore: fix broken rustup with cargo and rustc
feat: add module for python by default

--- a/treefmt.toml
+++ b/treefmt.toml
@@ -1,10 +1,12 @@
-excludes = ["LICENSE", "flake.lock", "README.md", "justfile", ".*"]
+excludes = [
+  "LICENSE",
+  "flake.lock",
+  "README.md",
+  "treefmt.toml",
+  "justfile",
+  ".*",
+]
 
 [formatter.nixfmt-rfc-style]
 command = "nixfmt"
 includes = ["*.nix"]
-
-[formatter.taplo]
-command = "taplo"
-options = ["format"]
-includes = ["*.toml"]
